Add events for when players join and leave, and handlers to spam people when this happens with text.

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -117,3 +117,6 @@ messages:
                 generic: 'An error occurred: %s.'
         sender:
                 console: '%s@%s'
+        member:
+                join: '%s has joined %s'
+                leave: '%s has left %s'
