--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -7,7 +7,7 @@ softdepends:
 commands:
   duckchat:
     description: The main DuckChat command.
-    usage: /<command> channels|channel|chlist|part|join|me|msg|reply|reload
+    usage: /<command> channels|channel|chlist|part|join|say|me|msg|reply|reload
     aliases:
             - dc
             - channels
@@ -22,6 +22,9 @@ commands:
             - r
             - reply
             - dcreload
+            - t
+            - tell
+            - whisper
 permissions:
         duckchat.channels:
                 default: op
