--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>org.jgroups</groupId>
       <artifactId>jgroups</artifactId>
-      <version>3.5.0.Beta5</version>
+      <version>3.5.0.CR2</version>
     </dependency>
     <dependency>
       <groupId>net.milkbowl.vault</groupId>
