Add usage message for rexec.

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -127,7 +127,6 @@ messages:
                 suspect: '&6&l%s may be having issues'
                 join: '&6&l%s has joined'
                 leave: '&6&l%s has left'
-        irc:
-                playerlist:
-                        header: '%2$d players playing Minecraft on %1$d servers.'
-                        line: '%s(%d): %s'
+        rexec:
+                usage: '/%s <-g|<server>> <command>'
+
