--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <resources>
       <resource>
         <filtering>true</filtering>
-        <directory>src/resources</directory>
+        <directory>src/main/resources</directory>
       </resource>
     </resources>
     <plugins>
