--- a/duckchat-bukkit/pom.xml
+++ b/duckchat-bukkit/pom.xml
@@ -37,6 +37,11 @@
       <version>1.2.32</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jgroups</groupId>
+      <artifactId>jgroups</artifactId>
+      <version>3.5.0.CR2</version>
+    </dependency>
 <!--
     <dependency>
       <groupId>${project.groupId}</groupId>
