--- a/duckchat-irc/src/main/resources/config.yml
+++ b/duckchat-irc/src/main/resources/config.yml
@@ -15,6 +15,8 @@
 #        filters:
 #            '\.com': 'matecraft.org'
 #        onJoin:
+#            - type: SEND
+#              message: PROTOCTL XNAMES
 #            - type: PRIV_MSG
 #              target: NickServ
 #              message: identify NICK PASSWORD
