Fix Vault dependency.

--- a/duckchat-bukkit/src/main/resources/plugin.yml
+++ b/duckchat-bukkit/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: "DuckChat"
 version: "${version}-${project.build.number}"
 main: "org.cyberiantiger.minecraft.duckchat.bukkit.Main"
 website: "http://dev.bukkit.org/server-mods/duckchat/"
-softdepends:
+softdepend:
         - Vault
 commands:
   duckchat:
