--- a/duckchat-irc/pom.xml
+++ b/duckchat-irc/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cyberiantiger.minecraft</groupId>
     <artifactId>duckchat-parent</artifactId>
-    <version>1.10-SNAPSHOT</version>
+    <version>1.10</version>
   </parent>
   <build>
     <plugins>
