--- a/duckchat-core/pom.xml
+++ b/duckchat-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cyberiantiger.minecraft</groupId>
     <artifactId>duckchat-parent</artifactId>
-    <version>1.12-SNAPSHOT</version>
+    <version>1.12</version>
   </parent>
   <dependencies>
     <dependency>
