--- a/duckchat-irc/pom.xml
+++ b/duckchat-irc/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.9-R0.1-cybertiger</version>
+      <version>1.9-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -37,10 +37,11 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.schwering/irclib -->
     <dependency>
       <groupId>org.schwering</groupId>
       <artifactId>irclib</artifactId>
-      <version>666.0</version>
+      <version>2.0.0.Alpha3</version>
     </dependency>
   </dependencies>
 </project>
