--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,10 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
@@ -46,17 +46,17 @@
   </build>
   <repositories>
     <repository>
-      <id>bukkit-repo</id>
-      <url>http://repo.bukkit.org/content/groups/public/</url>
-    </repository>
+        <id>spigotmc-snapshots</id>
+        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
+      </repository>
     <repository>
       <id>cyberiantiger.repo</id>
       <url>http://cyberiantiger.org/maven/</url>
     </repository>
     <!-- Vault -->
     <repository>
-        <id>milkbowl-repo</id>
-        <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+      <id>hc.to</id>
+      <url>http://nexus.hc.to/content/repositories/pub_releases/</url>
     </repository>
   </repositories>
   <distributionManagement>
