--- a/duckchat-irc/pom.xml
+++ b/duckchat-irc/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>org.schwering</groupId>
       <artifactId>irclib</artifactId>
-      <version>2.0.0.Alpha3</version>
+      <version>1.10</version>
     </dependency>
   </dependencies>
 </project>
