--- a/duckchat-irc/pom.xml
+++ b/duckchat-irc/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cyberiantiger.minecraft</groupId>
     <artifactId>duckchat-parent</artifactId>
-    <version>1.13-SNAPSHOT</version>
+    <version>1.13.1-SNAPSHOT-for-MC1.15.2</version>
   </parent>
   <build>
     <plugins>
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.14.4-R0.1-SNAPSHOT</version>
+      <version>1.15.2-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
