--- a/duckchat-core/pom.xml
+++ b/duckchat-core/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>org.jgroups</groupId>
       <artifactId>jgroups</artifactId>
-      <version>3.5.0.CR2</version>
+      <version>3.5.1.Final</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
